# django-hexagonal-architecture

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
example/: Makefile  pyproject.toml
example/src/: README.md
example/src/apps/notes/: admin.py  apps.py
example/src/apps/notes/application/ports/: note_repository.py
example/src/apps/notes/application/services/: note_service.py
example/src/apps/notes/domain/entities/: note.py
example/src/apps/notes/domain/exceptions/: note.py
example/src/apps/notes/domain/services/: generate_reference.py
example/src/apps/notes/infrastructure/orm/: models.py
example/src/apps/notes/infrastructure/orm/migrations/: 0001_initial.py
example/src/apps/notes/infrastructure/persistence/: django_orm_note_repository.py
example/src/apps/notes/interfaces/: serializers.py  urls.py  views.py
example/src/apps/try/: apps.py
example/src/apps/try/interfaces/: urls.py
example/src/config/: container.py  settings.py  urls.py
src/django_admin_hex/: cli.py
src/django_admin_hex/templates/project/: pyproject.toml-tpl
