[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-hex"
version = "0.1.0"
description = "Custom Django project and app starter with hexagonal architecture"
authors = [
    { name = "Bruno González Llaga", email = "brunogllaga@icloud.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["Django>=4.2"]
requires-python = ">=3.8"

[project.scripts]
django-admin-hex = "django_hexagonal_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["django_hexagonal_cli"]
