[tool.poetry]
name = "example-project"
version = "0.0.1"
description = ""
authors = ["brunogllaga@icloud.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
django = "^5.1.3"
djangorestframework = "^3.15.2"
dependency-injector = "^4.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
